--- a/Poltry Farm web/index.html
+++ b/Poltry Farm web/index.html
@@ -38,7 +38,7 @@
             display: flex;
             flex-direction: row ;
             justify-content: space-between;
-            background-color: rgb(119, 118, 118);
+            background-color: rgb(111, 165, 147);
             height: 80vh;
         }
         .main .sidebar{
@@ -77,7 +77,7 @@
             border-radius: 10px;
         }
         .footer{
-            background-color: rgb(68, 3, 3);
+            background-color: rgb(160, 156, 156);
             height: 15vh;
             width: 100%;
             text-align: center;
@@ -119,6 +119,10 @@
                 height: auto;
             }
         }
+        img{
+            height: 500px;
+            width: 600px;
+        }
     </style>
 </head>
 <body>
@@ -141,11 +145,13 @@
     </div>
     <div class="main-content">
         <h2>Welcome to our Poultry Farm</h2>
-            <p>This system helps you manage your poultry farm efficiently. 
-            You can add farmers, track chicken inventory, and generate sales reports all in one place.
+        <img src="pexels-achim-bongard-87217-286580.jpg" alt="a pexels-achim-bongard-87217-286580.jpgpoltry image">
+            <p>The system helps you manage your poultry farm efficiently.<br> 
+                Thus poltry heath-check,feeding and breading programs.
+                
 
             </p>
-        <img src="pol.jpg" alt="">
+        
  
     </div>
    </section>
